.argo/testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-testing-app-backend
  name: app-backend
  namespace: testing
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-testing-app-backend
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-testing-app-backend
    spec:
      containers:
        - image: registry.sec.devops.uniks.de/app-backend:0.1.6
          name: app-backend
      imagePullSecrets:
        - name: registry
